[gd_scene load_steps=9 format=2]

[ext_resource path="res://Interactable.tscn" type="PackedScene" id=1]
[ext_resource path="res://Hungry Bolk.gd" type="Script" id=2]
[ext_resource path="res://bolk-guy.png" type="Texture" id=3]
[ext_resource path="res://DefaultLabel.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]

resource_name = "RESET"
length = 0.001
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "Scare"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.9 ),
"transitions": PoolRealArray( 0.406126, 1, 1, 0.196146, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.778577, 0.685346 ), Vector2( 1, 1 ), Vector2( 3.913, 1.70758 ), Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=3]

resource_name = "nomnom"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ), Vector2( 0.669483, 0.618069 ), Vector2( 1, 1 ), Vector2( 0.669483, 0.618069 ), Vector2( 1, 1 ), Vector2( 0.669483, 0.618069 ), Vector2( 1, 1 ), Vector2( 0.669483, 0.618069 ), Vector2( 1, 1 ), Vector2( 0.669483, 0.618069 ), Vector2( 1, 1 ) ]
}

[sub_resource type="RectangleShape2D" id=4]

custom_solver_bias = 0.0
extents = Vector2( 16, 16 )

[node name="Hungry Bolk" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )

[node name="InteractionArrow" parent="." index="1"]
visible = false
use_press_e_sprite = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]
root_node = NodePath("..")
autoplay = "RESET"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/RESET = SubResource( 1 )
anims/Scare = SubResource( 2 )
anims/nomnom = SubResource( 3 )
blend_times = [  ]

[node name="StaticBody2D" type="StaticBody2D" parent="." index="3"]
input_pickable = false
collision_layer = 1
collision_mask = 1
constant_linear_velocity = Vector2( 0, 0 )
constant_angular_velocity = 0.0
physics_material_override = null

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D" index="0"]
shape = SubResource( 4 )
_sections_unfolded = [ "shape" ]

[node name="AppleLabel" parent="." index="4" instance=ExtResource( 4 )]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -114.0
margin_top = -50.0
margin_right = 113.0
margin_bottom = -34.0
text = "GIVE APPLE TO BOLKO"
align = 1
valign = 1

[connection signal="player_sighted" from="InteractionArrow" to="." method="_on_InteractionArrow_player_sighted"]
